prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_const_function.nut
const function fn1() {}
const function fn2() {}
let x: array = true ? fn1 : fn2
return x